src/objects/BMCServiceDesk__BMC_ProtocolEndPoint__c.object
<CustomObject>
    <description>BMC_ProtocolEndPoint: CMDB Class that stores information about communication points from which data can be sent or received. Protocol endpoints link system or computer interfaces to logical networks. The available links are defined by the subclasses of protocol endpoint, communication, IP, and LAN. You can store links that do not fall into any of these subclasses within the BMC_ProtocolEndpoint class.   This class corresponds to the DMTF class CIM_ProtocolEndpoint.</description>
    <fields>
        <fullName>BMCServiceDesk__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProtocolType__c</fullName>
        <label>Protocol Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>IPv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
                <value>
                    <fullName>IPX</fullName>
                </value>
                <value>
                    <fullName>AppleTalk</fullName>
                </value>
                <value>
                    <fullName>DECnet</fullName>
                </value>
                <value>
                    <fullName>SNA</fullName>
                </value>
                <value>
                    <fullName>CONP</fullName>
                </value>
                <value>
                    <fullName>CLNP</fullName>
                </value>
                <value>
                    <fullName>VINES</fullName>
                </value>
                <value>
                    <fullName>XNS</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>TokenRing</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>Infiniband</fullName>
                </value>
                <value>
                    <fullName>Fibre Channel</fullName>
                </value>
                <value>
                    <fullName>ISDN BRI Endpoint</fullName>
                </value>
                <value>
                    <fullName>ISDN B Channel Endpoint</fullName>
                </value>
                <value>
                    <fullName>ISDN D Channel Endpoint</fullName>
                </value>
                <value>
                    <fullName>IPv4/v6</fullName>
                </value>
                <value>
                    <fullName>BGP</fullName>
                </value>
                <value>
                    <fullName>OSPF</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>UDP</fullName>
                </value>
                <value>
                    <fullName>TCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Protocol End Point</label>
    <nameField>
        <label>BMC_ProtocolEndPoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protocol End Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>